<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">RTK Valley</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_bdmap_location" translatable="false">On BDMap</string>
    <string name="menu_banner_show">Banner show</string>

    <string name="home_second">Home Second</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_gallery_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_slideshow_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="bd_map_location">BD MAP Location</string>
    <string name="loc_record">Loc. Record</string>
    <string name="banner_show">Banner show</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" tools:ignore="MissingTranslation">Hello blank fragment</string>


    <!-- pickview   -->
    <string name="picker_text_parse">解析数据</string>
    <string name="picker_text_show">显示省市区选择器</string>

    <string name="picker_custom_lunar">公农历切换</string>
    <string name="picker_time">时间选择器</string>
    <string name="picker_province">条件选择器</string>

    <string name="picker_custom_time">时间选择器自定义布局</string>
    <string name="picker_custom_province">条件选择器自定义布局</string>
    <string name="picker_custom_parent">自定义父容器</string>
    <string name="picker_use_circle_divider">使用圆形分割线</string>
    <string name="picker_non_linkage">条件选择器(不联动)</string>
    <string name="picker_json_parse_sample">省市区Json文件解析示例</string>
    <string name="menu_lib_interface" translatable="false">Lib Interface</string>

</resources>
