<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.weng.rtkvalley.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home">

        <action
                android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
                app:destination="@id/nav_home_second"/>
    </fragment>
    <fragment
            android:id="@+id/nav_home_second"
            android:name="com.weng.rtkvalley.ui.home.HomeSecondFragment"
            android:label="@string/home_second"
            tools:layout="@layout/fragment_home_second">
        <action
                android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
                app:destination="@id/nav_home"/>

        <argument
                android:name="myArg"
                app:argType="string"/>
    </fragment>

    <fragment
            android:id="@+id/nav_gallery"
            android:name="com.weng.rtkvalley.ui.gallery.GalleryFragment"
            android:label="@string/menu_gallery"
            tools:layout="@layout/fragment_gallery"/>

    <fragment
            android:id="@+id/nav_slideshow"
            android:name="com.weng.rtkvalley.ui.slideshow.SlideshowFragment"
            android:label="@string/menu_slideshow"
            tools:layout="@layout/fragment_slideshow"/>
    <fragment
            android:id="@+id/nav_banner_show"
            android:name="com.weng.rtkvalley.ui.banner_show.BannerShowFragment"
            android:label="@string/menu_banner_show"
            tools:layout="@layout/fragment_banner_show"/>
    <fragment
            android:id="@+id/nav_bdmap_location"
            android:name="com.weng.rtkvalley.ui.bdmap_location.BDMapLocationFragment"
            android:label="@string/menu_bdmap_location"
            tools:layout="@layout/fragment_bdmap_location"/>
</navigation>